GetSharedCartItemsRequest added
